# lib/api-spec/openapi.yaml
@@ -411,6 +411,8 @@ components:
           type: boolean
         theme:
           type: string
+        syncAccounts:
+          type: boolean
 
     UserProfileUpdate:
       type: object
@@ -421,6 +423,8 @@ components:
           type: boolean
         theme:
           type: string
+        syncAccounts:
+          type: boolean
 
     UserStats:
       type: object
